# computational-scheme-theory

./: .editorconfig  .gitignore  API_REFERENCE.md  AUTOMATA_IMPLEMENTATION_COMPLETE.md  AUTOMATA_IMPLEMENTATION_STATUS.md  AUTOMATA_TEST_RESULTS.md  BUILD_PROGRESS.md  BUILD_SUCCESS.md  CLAUDE.md  COMBINATOR_ALGEBRA_IMPLEMENTATION.md  COMPLETE_STATUS.md  COMPREHENSIVE_PROGRESS.md  CURRENT_CAPABILITIES.md  DIMENSIONAL_FRAMEWORK_STATUS.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_COVERAGE_AUDIT.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  HASKELL_CORE_REMOVED.md  HASKELL_CORE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INSTALL_NOW.md  INTEGRATION_COMPLETE.md  Makefile  NLP_AUGMENTATION_COMPLETE.md  NLP_READINESS_STATUS.md  PERSISTENCE_COMPLETE.md  PERSISTENCE_IMPLEMENTATION_SUMMARY.md  PIPELINE_COMPLETE.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  READY_FOR_VALIDATION.md  SETUP_STATUS.md  SYSTEM_COMPLETE.md  TROUBLESHOOTING.md  VALIDATION_RESULTS_ANALYSIS.md  VALIDATION_SUMMARY.md  (+18 more)
.obsidian/: community-plugins.json  workspace.json
canvas/: Documentation Flow Map.canvas  Epistemic Implementation Workflow.canvas
docs/: LLM_INTEGRATION.md  USING_DIMENSIONAL_FRAMEWORK.md
haskell-core/: README.md  computational-scheme-theory.cabal
haskell-core/src/: Main.hs  TestScopeTreeMain.hs
haskell-core/src/ComputationalScheme/: Rig.hs  Types.hs
haskell-core/src/ComputationalScheme/Algorithm1/: AST.hs  AlphaConversion.hs  BindingExtractor.hs  Parser.hs
haskell-core/src/ComputationalScheme/Algorithm2/: OpenCover.hs  Scope.hs  ScopeAnalysis.hs  ScopeTree.hs  Topology.hs
haskell-core/src/ComputationalScheme/Algorithm3/: CechComplex.hs  Nerve.hs  SimplicialComplex.hs
haskell-core/src/ComputationalScheme/Algorithm4/: BettiNumbers.hs  ChainComplex.hs  Cohomology.hs  IncidenceMatrix.hs
haskell-core/src/ComputationalScheme/Service/: API.hs
haskell-core/test/: Algorithm1Spec.hs  Algorithm2Spec.hs  Algorithm3Spec.hs  Algorithm4Spec.hs  TestScopeTree.hs
haskell-core/test/integration/: EndToEndSpec.hs
proto/: common.proto  coordinator.proto  math_core.proto  metrics_calc.proto
python-coordinator/: README.md  requirements.txt  setup.py
racket-mcp/: README.md  info.rkt
racket-metrics/: README.md  ast-types.rkt  cfg-builder.rkt  cfg-types.rkt  cyclomatic.rkt  graph-utils.rkt  info.rkt  main.rkt  metrics-api.rkt  r5rs-parser.rkt
racket-unified/: ACHIEVEMENT_REPORT.md  ALL_COMPLETE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE.md  COMPLETION_CERTIFICATE.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  COVERAGE_VALIDATION.md  COVERAGE_VALIDATION_SUMMARY.md  CRITICAL_GAPS.md  DEPLOYMENT.md  FINAL_COMPLETE.md  FINAL_COMPLETION_REPORT.md  FINAL_COVERAGE_REPORT.md  FINAL_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HASKELL_REMOVAL_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_COMPLETE.md  INTEGRATION_VERIFICATION.md  LEARNING_ADAPTATION_COMPLETE.md  PLAN_VS_ACHIEVEMENT.md  PLAN_VS_IMPLEMENTATION.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SGP-ASLN_COMPLETE.md  SGP-ASLN_FINAL_REPORT.md  SGP-ASLN_FULL_IMPLEMENTATION.md  SGP-ASLN_IMPLEMENTATION.md  STATUS.md  (+14 more)
scripts/: analyze_debug_output.py  analyze_expanded_corpus.py  analyze_validation.py  correlate_data_complexity.py  (+10 more)
(+339 files in other folders)
