cabal-version: 3.8
name: computational-scheme-theory
version: 0.1.0.0
synopsis: Mathematical core for Computational Scheme Theory - computes H¹ cohomology
description: Implements algorithms to compute Čech cohomology H¹(X_Comp, O_Comp) from R5RS Scheme programs for empirical validation of Computational Scheme Theory.

homepage: https://github.com/your-org/computational-scheme-theory
license: MIT
license-file: LICENSE
author: Computational Scheme Theory Research Team
maintainer: research@example.com

build-type: Simple

extra-source-files:
  README.md
  CHANGELOG.md

library
  exposed-modules:
    ComputationalScheme.Types
    ComputationalScheme.Rig
    ComputationalScheme.Algorithm1.Parser
    ComputationalScheme.Algorithm1.AST
    ComputationalScheme.Algorithm1.AlphaConversion
    ComputationalScheme.Algorithm1.BindingExtractor
    ComputationalScheme.Algorithm2.Topology
    ComputationalScheme.Algorithm2.Scope
    ComputationalScheme.Algorithm2.OpenCover
    ComputationalScheme.Algorithm3.Nerve
    ComputationalScheme.Algorithm3.SimplicialComplex
    ComputationalScheme.Algorithm3.CechComplex
    ComputationalScheme.Algorithm4.ChainComplex
    ComputationalScheme.Algorithm4.IncidenceMatrix
    ComputationalScheme.Algorithm4.Cohomology
    ComputationalScheme.Algorithm4.BettiNumbers
    ComputationalScheme.Service.API
    -- ComputationalScheme.Distributed.TropicalRig      -- Phase 3: Distributed coordination
    -- ComputationalScheme.Distributed.VectorClock      -- Phase 3: Distributed coordination
    -- ComputationalScheme.Distributed.Hypergraph      -- Phase 3: Distributed coordination
    -- ComputationalScheme.Service.GRPC                 -- Phase 1 Week 13: gRPC service
    -- ComputationalScheme.Utils.Pretty                 -- Future: Pretty printing utilities
    -- ComputationalScheme.Utils.Debug                 -- Future: Debug utilities

  -- other-modules:
  --   ComputationalScheme  -- Not yet implemented

  hs-source-dirs: src
  build-depends:
    base >=4.17 && <5.0,
    semirings >=0.6,
    hmatrix >=0.20,
    megaparsec >=9.0,
    containers >=0.6,
    text >=2.0,
    bytestring >=0.11,
    vector >=0.13,
    mtl >=2.3,
    QuickCheck >=2.14,
    HUnit >=1.6
    -- grpc-haskell >=0.5,          -- Optional: for service integration (Phase 1 Week 13)
    -- grpc-haskell-core >=0.5      -- Optional: for service integration (Phase 1 Week 13)

  default-language: Haskell2010
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedStrings

executable computational-scheme-theory
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base >=4.17 && <5.0,
    computational-scheme-theory,
    optparse-applicative >=0.17

  default-language: Haskell2010

test-suite computational-scheme-theory-test
  type: exitcode-stdio-1.0
  main-is: Algorithm1Spec.hs
  hs-source-dirs: test
  build-depends:
    base >=4.17 && <5.0,
    computational-scheme-theory,
    hspec >=2.10,
    QuickCheck >=2.14,
    HUnit >=1.6

  default-language: Haskell2010

benchmark computational-scheme-theory-bench
  type: exitcode-stdio-1.0
  main-is: Benchmarks.hs
  hs-source-dirs: bench
  build-depends:
    base >=4.17 && <5.0,
    computational-scheme-theory,
    criterion >=1.6

  default-language: Haskell2010

